--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <title>&lt;login-with-singpass-button> Demo</title>
-    <script type="module" src="../login-with-singpass-button.js"></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/gh/ryanntannn/login-with-singpass-button/login-with-singpass-button.min.js"
+    ></script>
   </head>
   <body>
     <login-with-singpass-button color="red">test</login-with-singpass-button>
